# crocus_rnd

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  gunicorn.service  nginx.conf  pyproject.toml
backend/core/: .dockerignore  .env.example  .flake8  .ruff.toml  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/core/src/: container.py  manage.py
backend/core/src/accounts/: models.py  repositories.py  schemas.py
backend/core/src/accounts/migrations/: 0001_initial.py  0002_authuser.py  0003_alter_authuser_options_alter_account_name_and_more.py  0004_alter_account_name_alter_account_phone_number.py
backend/core/src/async_to_sync/: run_with_loop.py
backend/core/src/config/: container.py  urls.py
backend/core/src/config/middlewares/: log.py
backend/core/src/config/settings/: __init__.py  base.py  database.py  drf.py  logging.py  logging_dict.py
backend/core/src/interfaces/services/: payment_accept.py
backend/core/src/ioc/: container.py  ioc.py  provider.py
backend/core/src/notification_bus/: sender.py
backend/core/src/notification_bus/interfaces/: sender.py
backend/core/src/notification_bus/services/: sender.py
backend/core/src/payments/: admin.py  models.py  repositories.py  serializers.py  tests.py  views.py
backend/core/src/payments/api/v1/: urls.py  views.py
backend/core/src/payments/application/: pause.py  validators.py
backend/core/src/payments/application/django/: admin.py  apps.py
backend/core/src/payments/application/dto/: order.py
backend/core/src/payments/application/gateways/: interface.py  tinkoff.py  yookassa.py
backend/core/src/payments/application/interactors/: call_me.py  create_order.py
backend/core/src/payments/application/models/: order.py
backend/core/src/payments/application/repositories/: tinkoff.py  yookassa.py
backend/core/src/payments/application/serializers/: call_me.py  payment.py
backend/core/src/payments/application/services/: call_me.py  payment_accept.py  payment_create.py
backend/core/src/payments/db/migrations/: 0001_initial.py  0006_order_customer_email.py  0007_alter_order_amount.py  0008_promocode_alter_order_customer_email_and_more.py  0009_alter_promocode_options_alter_promocode_code.py  0010_alter_promocode_with_is_percent.py
backend/core/src/payments/db/models/: __init__.py  order.py
backend/core/src/payments/db/repositories/: order.py
backend/core/src/payments/domain/entities/: order.py  order_id.py  value_objects.py
backend/core/src/payments/domain/exceptions/: validation.py
backend/core/src/payments/infrastructure/: __init__.py
backend/core/src/payments/migrations/: 0002_alter_order_note.py  0003_order_cash.py  0004_alter_order_receiver_name_and_more.py  0007_alter_order_amount.py
backend/core/src/payments/services/: call_me.py  payment_accept.py  payment_create.py
backend/core/src/payments/tests/: test_entities.py  test_payments.py
backend/core/src/products/: admin.py  mixins.py  models.py  tests.py  urls.py  views.py
backend/core/src/products/api/v1/: urls.py  views.py
backend/core/src/products/application/: mixins.py  serializers.py
backend/core/src/products/application/django/: apps.py  signals.py
backend/core/src/products/application/services/: cart.py
backend/core/src/products/db/migrations/: 0001_initial.py  0002_rename_type_product_kind.py  0006_alter_product_price.py  (+2 more)
backend/core/src/products/interfaces/: cart.py
backend/core/src/products/migrations/: 0003_alter_product_options_product_important.py  0005_alter_category_options.py  0006_alter_product_price.py
backend/core/src/products/services/: cart.py
backend/core/src/rabbitmq/: notifications.py
backend/core/src/utils/: pause.py
backend/tg_bot/: .env.example  .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/tg_bot/bot/: create_bot.py  download_image.py  main.py  messages.py
backend/tg_bot/bot/db/: database.py  models.py  queries.py
backend/tg_bot/bot/handlers/: __init__.py  admin.py  background_image.py  category_create.py  get_order_list.py  notifications.py  others.py  product_create.py
backend/tg_bot/src/: config.py  container.py  create_bot.py  main.py  notifier.py  provider.py  start_consuming.py
backend/tg_bot/src/config/: __init__.py  config.py  logging.py
backend/tg_bot/src/db/: database.py
backend/tg_bot/src/db/models/: __init__.py  payments.py  products.py
backend/tg_bot/src/db/repositories/: __init__.py  core.py
backend/tg_bot/src/dto/: order.py
backend/tg_bot/src/handlers/: admin.py  background_image.py  category_create.py  get_order_list.py  notifications.py  others.py  product_create.py
backend/tg_bot/src/logic/handlers/: __init__.py  cancel_state.py  category_create.py
backend/tg_bot/src/logic/middlewares/: __init__.py  dependency.py
backend/tg_bot/src/logic/rabbitmq/: notification_bus.py
backend/tg_bot/src/logic/utils/: __init__.py  download_image.py  markups.py  messages.py  utils.py
backend/tg_bot/src/main/: bot.py  config.py  main.py  notifier.py  provider.py  start_consuming.py
backend/tg_bot/src/models/: payments.py  products.py
backend/tg_bot/src/notification_bus/: handlers.py  notification_bus.py  sender.py
backend/tg_bot/src/rabbitmq/: notifications.py
backend/tg_bot/src/repositories/: core.py
backend/tg_bot/src/telegram/: command_for.py  download_image.py
backend/tg_bot/src/telegram/middlewares/: __init__.py  album.py
backend/tg_bot/src/telegram/routers/: __init__.py  admin.py  background_image.py  category_create.py  errors.py  order.py  product_create.py
backend/tg_bot/src/tg/: command_for.py  unknown_command.py
backend/tg_bot/src/tg/handlers/: admin.py  background_image.py  errors.py  get_order_list.py  notifications.py  others.py  product_create.py
backend/tg_bot/src/tg/middlewares/: __init__.py  album.py
backend/tg_bot/src/tg/routers/: __init__.py  admin.py  background_image.py  category_create.py  errors.py  get_order_list.py  order.py  product_create.py
backend/tg_bot/src/utils/: download_image.py  messages.py  middlewares.py  schemas.py  utils.py
src/bot/: sql.py  (+4 more)
(+223 files in other folders)
