[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = []

[tool.flake8]
exclude = [
    "*/venv/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*__init__.py*",
    "src/manage.py"
]
ignore = ["DJ01", "A003", "VNE003", "W503"]
max-line-length = 100
max-cognitive-complexity = 8
inline-quotes = "'"

[tool.black]
line-length = 100
exclude = '''
/(
    migrations
)/
'''

[tool.isort]
atomic = true
profile = "black"

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.1.6"
django-cachalot = "^2.5.3"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
rollbar = "^0.16.3"
redis = "^4.5.5"
django-redis = "^5.3.0"
django-cors-headers = "^4.2.0"
pre-commit = "^3.3.3"
requests = "^2.31.0"
pika = "^1.3.2"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-django = "^1.1.5"
flake8-quotes = "^3.3.2"
flake8-todo = "^0.7"
flake8-variables-names = "^0.0.5"
autoflake = "^1.3.1"
isort = "^5.12.0"
black="^23.7.0"
add-trailing-comma="^3.0.1"
